Added health handler.
